# Medical_chatbot

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  template.sh  vector_store.py
.github/workflows/: cicd.yaml
src/: helper.py  template.py
